Changes for project site move.

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ TODO
 20141011
 * removed README.macosx
 * updated dependencies
+* changes for project site move
 
 20140529
 * updated dependencies
