--- a/ChangeLog
+++ b/ChangeLog
@@ -6,10 +6,12 @@ TODO
 * directory
   - complete first approach to directory handling code
   - sub parse directory entry - type file tables
-* update libfsrefs.c
-* update msvcpp files
 * do not print full block data in:
   libfsrefs_metadata_block_read: metadata block data:
+
+20141026
+* changes for deployment
+* worked on format
 
 20141022
 * changes for deployment
