--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@ TODO
 * do not print full block data in:
   libfsrefs_metadata_block_read: metadata block data:
 
+20141130
+* code clean up
+
 20141026
 * changes for deployment
 * worked on format
