Worked on dpkg files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@ TODO
 * do not print full block data in:
   libfsrefs_metadata_block_read: metadata block data:
 
+20141226
+* updated dpkg files
+
 20141130
 * code clean up
 
