--- a/README
+++ b/README
@@ -1,15 +1,18 @@
-Library and tools to access the Resilient File System (ReFS).
+libfsrefs is a library to access the Resilient File System (ReFS).
 
 Note that this project currently only focuses on the analysis of the format.
 
 Project information:
+
 * Status: experimental
 * Licence: LGPLv3+
 
 Planned:
+
 * Finish library
 
 For more information see:
+
 * Project documentation: https://github.com/libyal/libfsrefs/wiki/Home
 * How to build from source: https://github.com/libyal/libfsrefs/wiki/Building
 
