--- a/ChangeLog
+++ b/ChangeLog
@@ -9,26 +9,8 @@ TODO
 * do not print full block data in:
   libfsrefs_metadata_block_read: metadata block data:
 
-20160108
-* 2016 update
-
-20150106
-* 2015 update
-
-20141226
-* updated dpkg files
-
-20141130
-* code clean up
-
-20141026
-* changes for deployment
-* worked on format
-
-20141022
-* changes for deployment
-
 20141011
+* see `git log' for more recent change log
 * removed README.macosx
 * updated dependencies
 * changes for project site move
